Alteração codigo errado

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li>1 Colher (sopa) de fermento</li>
 
         <h3>Cobertura</h3>
-        li>1/2 caixa de leite condensado</li>
+        <li>1/2 caixa de leite condensado</li>
         <li>1 colher (sopa) de margarina</li>
         <li>10 Colheres (sopa) de chocolate em pó</li>
 
